--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {
+  "devDependencies": {
     "typescript": "^5.0.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
